2006-06-05  Arangel Angov <ufo@linux.net.mk>

	* mk.po: Added mk (Macedonian) translation by Jovan Naumovski.

2006-06-02  Lasse Bang Mikkelsen  <lbm@fatalerror.dk>

	* da.po: Updated Danish translation.

2006-06-02  Danilo Šegan  <danilo.segan@pctel.com>

	* sr.po, sr@Latn.po: Added Serbian translations by Goran Rakic.

	* LINGUAS: Added sr and sr@Latn (Serbian).

2006-06-02  Lasse Bang Mikkelsen  <lbm@fatalerror.dk>

	* da.po: Updated Danish translation.

2006-05-31  Lasse Bang Mikkelsen  <lbm@fatalerror.dk>

	* da.po: Updated Danish translation.

2006-05-31  Takeshi AIHANA  <takeshi.aihana@gmail.com>

	* ja.po: Updated Japanese translation by
	         Koike Kazuhiko <kazhik@mozilla.gr.jp>.

2006-05-30  Lasse Bang Mikkelsen  <lbm@fatalerror.dk>

	* da.po: Updated Danish translation.

2006-05-30  Clytie Siddall <clytie@riverland.net.au>

	* vi.po: Added Vietnamese translation.
	* LINGUAS: Added vi.

2006-05-27  Funda Wang  <fundawang@linux.net.cn>

	* zh_CN.po: Updated Simplified Chinese translation.

2006-05-26  Gabor Kelemen  <kelemeng@gnome.hu>

	* hu.po: Translation added.

2006-05-26  Funda Wang  <fundawang@linux.net.cn>

	* POTFILES.in: Removed obsolete files.

2006-05-25  Jakub Friedl  <jfriedl@suse.cz>

	* cs.po: Updated Czech translation.

2006-05-23  Jakub Friedl  <jfriedl@suse.cz>

	* cs.po: Updated Czech translation.

2006-05-15  Vincent van Adrighem  <adrighem@gnome.org>

	* nl.po: Translation updated by Pepijn van de Geer.

2006-05-12  Christophe Fergeau  <teuf@gnome.org>

	* fr.po: revert previous commit of an up-to-date proof-read
	translation since I was told such translations don't
	belong in CVS yet.

2006-05-11  Christophe Fergeau  <teuf@gnome.org>

	* fr.po: Translation updated by Jonathan Ernst

2006-05-06  Ilkka Tuohela  <hile@iki.fi>

	* fi.po: Updated Finnish translation.

2006-05-04  Jakub Friedl  <jfriedl@suse.cz>

	* cs.po: Updated Czech translation.

2006-05-03  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
